product category manager changed